// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be in loading status 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="webhooks.page"
  />
  <PageHeader
    loading={true}
  >
    <PageActions
      loading={true}
      onCreate={[Function]}
      webhooksCount={0}
    />
  </PageHeader>
</div>
`;

exports[`should fetch webhooks and display them 1`] = `
<div
  className="page page-limited"
>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="webhooks.page"
  />
  <PageHeader
    loading={false}
  >
    <PageActions
      loading={false}
      onCreate={[Function]}
      webhooksCount={0}
    />
  </PageHeader>
  <div
    className="boxed-group boxed-group-inner"
  >
    <WebhooksList
      onDelete={[Function]}
      onUpdate={[Function]}
      webhooks={Array []}
    />
  </div>
</div>
`;
